--- a/components/modules/layout.module.css
+++ b/components/modules/layout.module.css
@@ -4,7 +4,7 @@
 
 .layout {
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   background-color: #272727;
   color: #ffffff;
   font-family: 'Inter Tight',sans-serif;
