--- a/components/modules/sidenav.module.css
+++ b/components/modules/sidenav.module.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
 
 .sidenav {
   display: flex;
   flex-direction: column;
   position: fixed;
   z-index: 998;
-  height: 100%;
   transition: all 0.3s ease-out;
   box-sizing: border-box;
 }
@@ -13,8 +13,11 @@
 .sidenav a {
   color: inherit;
   text-decoration: inherit;
-  text-transform: uppercase;
-  letter-spacing: 0px;
+  text-transform: capitalize;
+  letter-spacing: 0.5px;
+  font-family: 'Inter Tight',sans-serif;
+  font-size: 15px;
+  font-weight: 300;
 }
 
 @media screen and (min-width: 900px) {
@@ -23,6 +26,8 @@
   width: 22vw;
   padding: 128px 8px 32px 32px;
   border-right:1px solid #414141;
+  height: 96vh;
+  margin-top: 0;
 }
 
 }
