--- a/styles/newstyles.css
+++ b/styles/newstyles.css
@@ -13,12 +13,35 @@ body {
 }
 
 a {
-  color: #53dd6c;
+  color: #ff3d00;
   text-decoration: none;
+}
+
+.imager {
+  object-fit: contain;
+  border-radius: 12px;
+  box-shadow: 8px 8px 12px #111111;
+  position: relative;
+}
+
+.imager::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content:'';
+  background-color: rgba(0,0,0,0.7);
+  border: 1px solid red;
+  z-index: 3;
 }
 
 .col-g {
   color: #53dd6c;
+}
+
+.col-o {
+  color: #ff3d00;
 }
 
 .bod {
@@ -118,11 +141,11 @@ small {
 }
 
 p {
-  letter-spacing: 0px;
-  line-height: 1.4em;
+  letter-spacing: 0.5px;
+  line-height: 1.64em;
   margin: 0;
   padding: 32px 0 0 0;
-  color: #d7d7d7;
+  color: #ffffff;
 }
 
 h6 {
@@ -144,8 +167,6 @@ h5 {
 }
 
 h4 {
-  font-size: 2rem;
-  line-height: 1.1;
   margin: 0.5rem 0 .75rem 0;
   font-weight: 500;
   font-family: 'Inter Tight',sans-serif;
@@ -173,7 +194,7 @@ h1 {
 }
 
 .gen-h {
-  background-color: #212121;
+
   box-sizing: border-box;
   padding: 8px;
 
@@ -195,8 +216,11 @@ h1 {
 @media screen and (min-width: 900px) {
 
   p { font-size: 1rem;}
-  h5 { font-size: 1.32rem;}
   h6 { font-size: 12px;}
+  h5 { font-size: 1.32rem;}
+  h4 {
+    font-size: 2rem;
+  }
   h3 {
     font-size: 3.2rem;
   }
@@ -213,6 +237,12 @@ h1 {
 
   .titler:hover {
     box-shadow: 6px 5px 12px #171717 inset;
+  }
+
+  .imager {
+    width: 56%;
+    margin-left: 30vw;
+    margin-top: 128px;
   }
 
 }
@@ -291,3 +321,78 @@ h1 {
 
 }
 
+/**************************************************************************************
+BRAINS
+************************************************************************************/
+
+
+    .brainContainer{
+        width:50vw;
+        height:50vw;
+        max-height:400px;
+        max-width:400px;
+        position:absolute;
+        left:50%;
+        top:50%;
+        transform:translate(-50%,-50%);
+        overflow:hidden;
+        cursor:pointer;
+        z-index:-1;
+    }
+    svg{
+        height:100%;
+        width:100%;
+        position:absolute;
+        left:50%;
+        top:50%;
+        transform:translate(-50%,-50%);
+    }
+    path{
+      fill:transparent;
+    }
+    .brainPath{
+      stroke:#00ff00;
+      stroke-width:1;
+    }
+    .brainCircle{
+      stroke:#00FF00;
+      fill:#00FF00;
+    }
+    .brainRect{
+      stroke:#00FF00;
+      fill:#00FF00;
+    }
+    .brainEllipse{
+      stroke:#00FF00;
+      fill:#00FF00;
+    }
+    .animatePaths{
+      animation: goPath 3000ms alternate infinite;
+    }
+    .animateCircles{
+      animation: goCircle 3000ms alternate infinite;
+    }
+    .animateRects{
+      animation: goRect 3000ms alternate infinite;
+    }
+    @keyframes goPath {
+      to {
+        stroke-dashoffset: 0;
+      }
+    }
+    @keyframes goRect {
+      to {
+        opacity:0;
+      }
+    }
+    @keyframes goCircle {
+      0% {
+        opacity:0;
+      }
+      50% {
+        opacity:1;
+      }
+      100% {
+        opacity:0;
+      }
+    }
