--- a/styles/newstyles.css
+++ b/styles/newstyles.css
@@ -143,27 +143,25 @@ small {
 p {
   letter-spacing: 0.5px;
   line-height: 1.64em;
-  margin: 0;
-  padding: 32px 0 0 0;
   color: #ffffff;
 }
 
 h6 {
-  font-weight: 400;
-  margin: 0;
+  font-weight: 300;
   line-height: 1.25;
   font-family: 'Inter Tight',sans-serif;
   text-transform: uppercase;
+  letter-spacing: 0.5px;
 }
 
 h5 {
-  font-weight: 500;
+  font-weight: bold;
   line-height: 1.24;
-  margin: 0.5rem 0 .75rem 0;
   font-family: 'Inter Tight',serif;
   letter-spacing: 0.5px;
-  border-left: 2px solid #53dd6c;
-  padding-left: 32px;
+  padding-left: 16px;
+  border-left: 2px solid #ff3d00;
+
 }
 
 h4 {
@@ -187,7 +185,6 @@ h2 {
 }
 
 h1 {
-
   line-height: 1;
   text-transform: uppercase;
   font-family: 'Inter Tight',sans-serif;
@@ -215,9 +212,19 @@ h1 {
 
 @media screen and (min-width: 900px) {
 
-  p { font-size: 1rem;}
-  h6 { font-size: 12px;}
-  h5 { font-size: 1.32rem;}
+  p { 
+    font-size: 1rem;
+    padding-bottom: 24px;
+  }
+  h6 { font-size: 12px;
+  margin-bottom: 20px;
+}
+
+  h5 { 
+    font-size: 1.4rem;
+    margin: 0 0 24px 0;
+  }
+
   h4 {
     font-size: 2rem;
   }
@@ -225,9 +232,9 @@ h1 {
     font-size: 3.2rem;
   }
   h1 {
-      font-size: 80px;
+      font-size: 48px;
       font-weight: 700;
-      margin: 0.5rem 0 .75rem 0;
+      margin: 0 0 2rem 0;
   }
   .titler {
     width: max-content;
@@ -252,14 +259,17 @@ h1 {
   p { font-size: 1rem;}
   h5 { font-size: 1.32rem;}
   h4 {font-size: 1.6rem; width: 100%;}
-  h6 { font-size: 12px;}
+  h6 { 
+    font-size: 12px;
+    margin-bottom: 20px;
+  }
   h3 {
     font-size: 2.4rem;
   }
   h1 {
     font-size: 48px;
     font-weight: 700;
-    margin: 0.5rem 0 .75rem 0;
+    margin: 0 0 .72rem 0;
 }
 
   .titler {
@@ -285,7 +295,10 @@ h1 {
   h4 { font-size: 1.56rem; }
   h5 { font-size: 1.32rem; }
   p { font-size: 1rem; }
-  h6 { font-size: 12px;}
+  h6 { 
+    font-size: 12px;
+    margin-bottom: 20px;
+  }
 
   .titler {
     width: max-content;
@@ -309,7 +322,10 @@ h1 {
  h3 { font-size: 24px; }
  h4 { font-size: 1.32rem;}
  h5 { font-size: 1.32rem;}
- h6 { font-size: 12px;}
+ h6 { 
+  font-size: 12px;
+  margin-bottom: 20px;
+}
  p { font-size: 1rem; }
  small { font-size: 12px; }
 
