--- a/styles/newstyles.css
+++ b/styles/newstyles.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
 body {
   margin: 0;
   padding: 0;
   background-color: #272727;
   color: white;
+  font-family: 'Inter Tight',sans-serif;
 }
 
 a {
