--- a/components/modules/mother.module.css
+++ b/components/modules/mother.module.css
@@ -89,6 +89,29 @@
   box-sizing: border-box;
 }
 
+.searchbox {
+  background-color: #272727;
+  border: 1px solid #878787;
+  border-radius: 4px;
+  height: 32px;
+  width: 88%;
+  padding: 2px 8px;
+  margin-bottom: 32px;
+}
+
+.searchoutput {
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+
+}
+
+.fillera, .fillerb {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
 @media screen and (min-width: 900px) {
 
   .mother {
@@ -136,12 +159,12 @@
 
   .mother {
     flex-direction: column-reverse;
-    padding: 128px 24px 128px 24px;
+    padding: 128px 32px 128px 32px;
     height: max-content;
   }
   
   .child {
-    width: 96vw;
+    width: 92vw;
     padding-left: 0vw;
     padding-right: 0vw;
     margin-left: 0vw;
@@ -154,12 +177,12 @@
 
   .mother {
     flex-direction: column-reverse;
-    padding: 128px 16px 128px 16px;
+    padding: 128px 32px 128px 32px;
     height: max-content;
   }
 
   .child {
-    width: 96vw;
+    width: 90vw;
     padding-left: 0vw;
     padding-right: 0vw;
     margin-left: 0vw;
