--- a/components/modules/sidenav.module.css
+++ b/components/modules/sidenav.module.css
@@ -29,9 +29,9 @@
   text-decoration: inherit;
   text-transform: capitalize;
   letter-spacing: 0.5px;
-  font-size: 16px;
-  font-weight: 500;
-  margin: 14px 0 6px 0;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 4px 0 4px 0;
   color: #a7a7a7;
 }
 
@@ -43,6 +43,12 @@
   border-right:1px solid #414141;
   height: 96vh;
   margin-top: 0;
+}
+
+.sidenav p {
+  margin: 24px 0 0 0;
+  padding: 0;
+  font-weight: bold;
 }
 
 }
