--- a/components/swiperpanel.module.css
+++ b/components/swiperpanel.module.css
@@ -6,7 +6,6 @@
   font-weight: 300;
   padding: 0;
   margin: 0;
-  align-items: flex-end;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -22,9 +21,17 @@
   height: 100vh;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: row;
   box-sizing: border-box;
+}
+
+.swiperbox {
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
+
+@media screen and (min-width: 769px) {
+  .swiperbox { flex-direction: row; color: white; padding-top: 80px; }
 }
 
 
