--- a/styles/newstyles.css
+++ b/styles/newstyles.css
@@ -217,7 +217,7 @@ h1 {
 @media screen and (min-width: 900px) {
 
   p { 
-    font-size: 1rem;
+    font-size: 15px;
     padding-bottom: 24px;
   }
 
