--- a/components/modules/supa.module.css
+++ b/components/modules/supa.module.css
@@ -3,7 +3,7 @@
 .itemcontainer {
   display: flex;
   width: 100%;
-  min-height: 200px;
+  height: max-content;
   color: white;
   box-sizing: border-box;
 }
@@ -18,6 +18,7 @@
 @media screen and (min-width: 900px) {
   .fullpager { width: 72%; margin-left: 24%; }
   .itemcontainer { flex-direction: row;}
+  .itemcontainercolumn { flex-direction: column; margin: 24px 0 4px 0;}
   .supamain { flex-direction: column; padding: 16px; width: 50%;}
   .supaaux { flex-direction: column; padding: 16px; width: 50%; }
   .supalabel { font-size: 12px;}
@@ -32,6 +33,7 @@
 @media screen and (max-width: 899px) and (min-width: 769px) {
   .fullpager { width: 76%; margin-left: 24%;}
   .itemcontainer { flex-direction: row;}
+  .itemcontainercolumn { flex-direction: column; margin: 24px 0 4px 0;}
   .supamain { flex-direction: column; padding: 12px; width: 50%;}
   .supaaux { flex-direction: column; padding: 12px; width: 50%;}
   .supalabel { font-size: 12px;}
@@ -46,6 +48,7 @@
 @media screen and (max-width: 768px) and (min-width: 641px) {
   .fullpager { width: 100%;}
   .itemcontainer { flex-direction: column;}
+  .itemcontainercolumn { flex-direction: column; margin: 24px 0 4px 0;}
   .supamain, .supaaux { width: 100%; flex-direction: column; padding: 8px;}
   .supalabel { font-size: 12px;}
   .supahero { font-size: 16px; line-height: 1.25em; padding: 0; margin: 4px 0 2px 0;}
@@ -59,6 +62,7 @@
 @media screen and (max-width: 640px) {
   .fullpager { width: 100%; }
   .itemcontainer { flex-direction: column; border: 1px solid #474747; border-radius: 6px; margin-bottom: 24px;}
+  .itemcontainercolumn { flex-direction: column; margin: 24px 0 4px 0;}
   .supamain {width: 100%; flex-direction: column; padding: 16px; text-align: center;}
   .supaaux {width: 100%; flex-direction: column; padding: 12px;}
   .supalabel { font-size: 10px;}
