--- a/components/swiperpanel.module.css
+++ b/components/swiperpanel.module.css
@@ -1,24 +1,22 @@
 .swiper-slide { 
   width: 100vw; 
-  height: 100vh;
-  overflow: hidden;
+  height: 100%;
   color: #272727;
   font-weight: 300;
   padding: 0;
   margin: 0;
   display: flex;
-  flex-direction: column;
   box-sizing: border-box;
 }
 
 .swiper-wrapper {
-  height: 100vh;
+  height: 100%;
   transition-timing-function:  cubic-bezier(1.000, 0.015, 0.810, 0.995);
   box-sizing: border-box;
 }
 
 .swiper {
-  height: 100vh;
+  height: 100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -30,9 +28,42 @@
   display: flex;
 }
 
-@media screen and (min-width: 769px) {
-  .swiperbox { flex-direction: row; color: white; padding-top: 80px; }
+.swiperbigbox {
+  height: 100vh;
+  width: 100vw;
 }
 
+.swiperboxtiny {
+  height: 720px;
+  width: 100%;
+  border: 2px solid white;
+}
 
+.theslide {
+  height: 100%;
+  width: 100%;
+}
+
+.swiper-pagination-bullets {
+  width: 40px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 16px;
+  color: #000;
+  opacity: 1;
+  background: transparent;
+  border: 1px solid red !important;
+}
+
+.swiper-pagination-bullet-active {
+  color: #fff;
+  font-size: 16px;
+  padding: 0 8px;
+}
+
+.swiper-pagination, .swiper-pagination-clickable, .swiper-pagination-horizontal, .called {
+  color: white;
+  font-size: 20px;
+}
 
