--- a/components/modules/soa.module.css
+++ b/components/modules/soa.module.css
@@ -2,11 +2,12 @@
 
 .soamain {
   box-sizing: border-box;
-  height: max-content;
+  height: 100%;
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: start;
   padding: 20px 80px;
   background-color: #171717;
 }
@@ -14,7 +15,7 @@
 .soacontainer {
   box-sizing: border-box;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background-color: #171717;
@@ -111,6 +112,19 @@
   flex-wrap: wrap;
   gap: 16px;
   justify-content: center;
+  background-color: #171717;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.imagescontainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: #171717;
+  box-sizing: border-box;
+  padding: 16px 16px 80px 16px;
 }
 
 .herobox {
@@ -120,6 +134,16 @@
   height: 200px;
   transition: all 0.3s ease-in;
   transform-origin: center center;
+  box-sizing: border-box;
+  padding: 8px;
+  justify-content: start;
+  align-items: center;
+}
+
+.herobox p {
+  font-family: 'Linden Hill',serif;
+  font-size: 18px;
+  padding: 0;
 }
 
 .herobox:hover {
@@ -130,6 +154,7 @@
 .actualimage {
   transition: all 0.3s ease-in;
   transform-origin: center center;
+  border: 2px solid white;
 }
 
 .herobox:hover .actualimage:hover {
