--- a/components/modules/soa.module.css
+++ b/components/modules/soa.module.css
@@ -43,7 +43,7 @@
   position: relative;
   width: 20vw;
   height: 100%;
-  border: 1px solid #DDBB07;
+  border: 1px solid #474747;
   background-color: #171717;
   border-radius: 8px;
   flex-wrap: wrap;
