--- a/components/modules/soa.module.css
+++ b/components/modules/soa.module.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Linden+Hill&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .soamain {
   box-sizing: border-box;
@@ -7,9 +8,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   padding: 20px 80px;
   background-color: #171717;
+}
+
+.soamain a {
+  color: white;
 }
 
 .soacontainer {
@@ -54,6 +59,7 @@
   line-height: 1em;
   margin-top: 8px;
 }
+
 .soabody:hover .listing {
   display: block;
   box-shadow: 5px 5px 12px #070707, -6px -4px 10px #171717;
@@ -115,6 +121,7 @@
   background-color: #171717;
   margin-top: 16px;
   margin-bottom: 16px;
+  height: 100%;
 }
 
 .imagescontainer {
@@ -125,6 +132,7 @@
   background-color: #171717;
   box-sizing: border-box;
   padding: 16px 16px 80px 16px;
+  align-items: center;
 }
 
 .herobox {
@@ -136,7 +144,7 @@
   transform-origin: center center;
   box-sizing: border-box;
   padding: 8px;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -149,9 +157,23 @@
   transform-origin: center center;
   box-sizing: border-box;
   padding: 8px;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   cursor: pointer;
+}
+
+.heroboxinner {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 300px;
+  transition: all 0.3s ease-in;
+  transform-origin: center center;
+  box-sizing: border-box;
+  padding: 8px;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 16px;
 }
 
 .herobox p, .heroboxlinked p {
@@ -159,6 +181,18 @@
   font-size: 18px;
   padding: 0;
   color: #474747;
+  text-align: center;
+}
+
+.heroboxinner p {
+  font-family: 'Inter Tight',sans-serif;
+  color: white;
+  font-size: 16px;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 0;
+  margin-bottom: 8px;
+  font-weight: bold;
 }
 
 .herobox:hover p, .heroboxlinked:hover p {
@@ -174,6 +208,14 @@
   transition: all 0.3s ease-in;
   transform-origin: center center;
   border: 2px solid #313131;
+  padding: 8px;
+}
+
+.innerimage {
+  transition: all 0.3s ease-in;
+  transform-origin: center center;
+  border: 2px solid #313131;
+  padding: 8px;
 }
 
 .herobox:hover .actualimage:hover {
@@ -186,4 +228,37 @@
   width: 300px;
   height: 300px;
   border: 2px solid white;
+}
+
+.imagescontainer h4 {
+  font-family: 'Linden Hill',serif;
+  font-size: 24px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #DDBB07;
+}
+
+.theliner {
+  height: 1px;
+  width: 50%;
+  background-color: white;
+}
+
+.enderspace {
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.enderspace a {
+  font-family: 'Inter Tight',serif;
+  color: white;
+  transition: all 0.11s ease-in;
+  transform-origin: center center;
+}
+
+.enderspace a:hover {
+  transform: scale(1.2);
 }
