--- a/components/modules/soa.module.css
+++ b/components/modules/soa.module.css
@@ -67,7 +67,7 @@
 
 .soabody button {
   font-size: 16px;
-  font-family: 'Linden Hill',serif;
+  font-family: 'Inter Tight',sans-serif;
   text-transform: uppercase;
   font-weight: bold;
   text-align: center;
@@ -90,8 +90,8 @@
 }
 
 .listing a {
-  font-family: 'Linden Hill',serif;
-  font-size: 18px;
+  font-family: 'Inter Tight',sans-serif;
+  font-size: 14px;
   border: 0px;
   text-transform: uppercase;
   line-height: 2em;
@@ -101,11 +101,13 @@
   display: block;
   text-decoration: none;
   color: #ffffff;
+  transition: all 0.14s ease-out;
 }
 
 .listing a:hover {
   color: #DDBB07;
   background-color: #171717;
+  box-shadow: 2px 2px 6px #070707, -2px -2px 5px #111111;
 }
 
 .spacer {
@@ -176,9 +178,17 @@
   margin-bottom: 16px;
 }
 
-.herobox p, .heroboxlinked p {
+.herobox p {
   font-family: 'Linden Hill',serif;
   font-size: 18px;
+  padding: 0;
+  color: #474747;
+  text-align: center;
+}
+
+.heroboxlinked p {
+  font-family: 'Inter Tight',sans-serif;
+  font-size: 16px;
   padding: 0;
   color: #474747;
   text-align: center;
@@ -245,6 +255,44 @@
   background-color: white;
 }
 
+.theliner22 {
+  height: 40px;
+  width: 72%;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.heading5 {
+  font-family: 'Inter Tight',sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  text-align: center;
+  width: 200px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.12s ease-out;
+  color: white;
+}
+
+.heading5 a {
+  color: white;
+  transition: all 0.12s ease-out;
+  transform-origin: center center;
+}
+
+.heading5 a:hover {
+  color: #DDBB07;
+  transform: scale(0.9);
+}
+
 .enderspace {
   height: 100px;
   display: flex;
@@ -261,4 +309,17 @@
 
 .enderspace a:hover {
   transform: scale(1.2);
+}
+
+.subtitle {
+  margin-bottom: -12px;
+  margin-top: 32px;
+  font-family: 'Inter Tight',serif;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  padding-top: 4px;
+  border-top: 1px solid #DDBB07;
+  width: 72%;
+  text-align: center;
 }
